fixat overflow i nyheter

--- a/styles/aktuellt.css
+++ b/styles/aktuellt.css
@@ -178,7 +178,6 @@
 
 .post .info {
   /* max-width: 60%; */
-  min-width: 400px;
 }
 
 .post .info h1 {
